= 0.1.4 =
* FIX: Main Menu Walker (Play pages with inactive links have active links)

= 0.1.3 =
* FIX: Form action link (Affiliate Redirect)
* FIX: Empty Name and Email leads
* UPDATE: WP NAV Walker now with option to activate links for menu item

= 0.1.2 =
* FIX: Public Function conflicts with Leadya Theme Framework
* UPDATE: Add WordPress (Yoast) SEO compatibility
* NEW: Added Plugin Updater

= 0.1.1 =
* FIX: Mobile Responsive
* FIX: Area Code and Geo Location not working
* FIX: Global CSS not implemented on the frontend
* NEW: Multilanguage Support - Internationalization added
* UPDATE: Optiomized Images

= 0.1 =
* Initial Release.